--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@vercel/analytics": "^1.0.1",
     "aos": "^2.3.4",
     "flowbite": "^1.6.5",
     "flowbite-react": "^0.4.4",
